Add proper summaries to each page.

--- a/content/docs/comparing-proposals/bip351.md
+++ b/content/docs/comparing-proposals/bip351.md
@@ -1,5 +1,6 @@
 ---
 title: "BIP 351: Private Payments"
+summary: The newest kid on the block is BIP 351, or “Private Payments.”
 weight: 2
 prev: /docs/comparing-proposals/bip47
 ---
