--- a/content/docs/comparing-proposals/bip351.md
+++ b/content/docs/comparing-proposals/bip351.md
@@ -22,7 +22,7 @@ As Private Payments requires both a notification transaction and a full node for
 - Easier wallet scanning
   - As a receiver is notified on-chain of what derivation path will be used for payments, he can scan OP_RETURN outputs for notifications sent to him and then pre-generate many possible addresses and check them using a standard Electrum server or BIP 158 filter. This requires less bandwidth and compute compared to Silent Payments scanning, both for the back-end and the user's wallet itself.
 
-## Trade-offs versus Silent Payments
+### Trade-offs versus Silent Payments
 
 - Worse on-chain efficiency
   - As a notification transaction is required before the first financial transaction, sending a BIP 351 payment ultimately requires a minimum of two on-chain transactions (and thus fees). While subsequent payments to the same payment code do not require new notification transactions, this initial burden makes them inefficient for one-off payments.
